# otto_agent

./: LICENSE  README.md  pyproject.toml
otto/: __init__.py  __main__.py
otto/core/: agent.py  cli.py  config.py  openai_client.py  prompts.py
otto/prompts/: __init__.py
otto/tools/: __init__.py  registry.py
