[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otto-agent"
version = "0.1.0"
description = "Otto: a Cursor-like Python CLI agent with tools and a reusable client"
readme = "otto/README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [ { name = "Andrew Campi" } ]
dependencies = [
  "openai>=1.40.0",
  "python-dotenv>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/andrewcampi/otto_agent"
Repository = "https://github.com/andrewcampi/otto_agent"

[tool.setuptools]
packages = ["otto", "otto.core", "otto.tools", "otto.prompts"]
include-package-data = true

[tool.setuptools.package-data]
otto = [
  "prompts/Agent Prompt 2025-09-03.txt",
  "prompts/Agent Prompt v1.2.txt",
  "prompts/Agent CLI Prompt 2025-08-07.txt",
]

[project.scripts]
otto = "otto.__main__:main"


